--- a/src/index.html
+++ b/src/index.html
@@ -8,16 +8,16 @@
 </head>
 
 <body>
-  <section>
-
-    <div id="root">
-      <h1 class="align"><strong>A Persistência da Memória</strong></h1>
-      A Persistência da Memória é uma visão subjetiva da temporalidade e das suas implicações, seja na obra
-      de arte ou nas lembranças. É uma homenagem ao tempo interior e inconsciente, que tem sua própria forma de ser
-      contada e que foge à racionalidade.<br>
-      A Persistência da Memória nos fala sobre a noção da temporalidade e da memória.<br><br>
-    </div><br>
-
+  <main>
+    <header>
+      <div id="root">
+        <h1 class="align"><strong>A Persistência da Memória</strong></h1>
+        A Persistência da Memória é uma visão subjetiva da temporalidade e das suas implicações, seja na obra
+        de arte ou nas lembranças. É uma homenagem ao tempo interior e inconsciente, que tem sua própria forma de ser
+        contada e que foge à racionalidade.<br>
+        A Persistência da Memória nos fala sobre a noção da temporalidade e da memória.<br><br>
+      </div><br>
+    </header>
     <div id="msg1">
       Escreva uma mensagem que
       você quer que faça parte da sua memória e não seja esquecida.<br> Codifique-a para que seja particular e a
@@ -32,18 +32,15 @@
       <br>
       <br>
     </div>
-
-    <p class="align"><em>
+    <label class="align">
         Indique a posição de deslocamento desejada:
         <input type="number" min="1" max="900" class="input" id="offset"><br><br>
-      </em>
+      
 
       <input type="button" id="cipher" class="input" value="Codificar">
       <input type="button" id="decipher" class="input" value="Decodificar">
-    </p>
-
-  </section>
-
+    </label>
+  </main>
   <footer>
     <p class="align"><em> © APersistenciaDaMemoria</em></p>
   </footer>
